fix line clamping on mobile displays

--- a/packages/prop-house-webapp/src/components/ProfileHeader/ProfileHeader.module.css
+++ b/packages/prop-house-webapp/src/components/ProfileHeader/ProfileHeader.module.css
@@ -73,7 +73,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 3; /* number of lines to show */
+  -webkit-line-clamp: 3;
   line-clamp: 3;
   -webkit-box-orient: vertical;
 }
@@ -86,6 +86,10 @@
   .profilePicCol {
     text-align: center;
     margin-bottom: 1rem;
+  }
+  .communityDescriptionRow p {
+    -webkit-line-clamp: 10;
+    line-clamp: 10;
   }
   .communityInfoCol {
     margin: 0 1rem;
